fixed: text wont overlap form its bordeeer any more

--- a/client/styles/feed.css
+++ b/client/styles/feed.css
@@ -5,6 +5,7 @@
     border: 2px solid darkcyan;
     padding: 10px;
     border-radius: 5px;
+    overflow-wrap: anywhere;
 }
 
 .post > * {
@@ -35,4 +36,38 @@
 }
 
 .edit-button {
+}
+
+#post-editor-container {
+    height: 200px;
+    background: white;
+    color: black;
+}
+
+#post-editor-editor {
+    width: 75vw;
+}
+
+#post-maker-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#post-title-editor {
+    display: flex;
+    flex-direction: column;
+}
+
+#post-title-editor label {
+    font-size: 40px
+}
+
+#post-title-editor input {
+    border: darkcyan solid 2px;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 10px;
+    width: 30vw;
+    height: 70px;
 }
