--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -102,8 +102,9 @@
     background-color: darkorange;
     width: 20%;
     text-align: center;
-    height: 100px;
-    font-size: 40px
+    height: fit-content;
+    min-height: 100px;
+    font-size: 40px;
 }
 
 .nav-item p {
@@ -115,36 +116,3 @@
     color: darkcyan;
 }
 
-#post-editor-container {
-    height: 200px;
-    background: white;
-    color: black;
- }
-
-#post-editor-editor {
-    width: 60%;
-}
-
-#post-maker-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#post-title-editor {
-    display: flex;
-    flex-direction: column;
-}
-
-#post-title-editor label {
-   font-size: 40px
-}
-
-#post-title-editor input {
-    border: darkcyan solid 2px;
-    padding: 5px;
-    border-radius: 5px;
-    margin: 10px;
-    width: 432px;
-    height: 70px;
-}
