--- a/client/styles/users.css
+++ b/client/styles/users.css
@@ -60,6 +60,7 @@
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
+    overflow-wrap: anywhere;
 }
 
 .post * {
@@ -96,6 +97,7 @@
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
+    overflow-wrap: anywhere;
 }
 
 .comment * {
@@ -119,6 +121,7 @@ h1 {
     border-radius: 10px;
     width: fit-content;
     height: fit-content;
+    overflow-wrap: anywhere;
 }
 
 .liked-post * {
